--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/index.styles.css">
     <link rel="icon" href="images/logo.png" type="image/x-icon">
     <link rel="shortcut icon" href="path/to/logo.ico" type="image/x-icon">
-    <title>DriveSure</title>
+    <title>AutoInsure</title>
 </head>
 <body>
     <header class="bg-light py-3">
@@ -24,20 +24,21 @@
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="login.html">Log In</a>
-                    </li>
+                    <div class="dropdown">
+                        <button class="btn btn-light dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                            Login
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                            <li><a class="dropdown-item" href="login.html">User</a></li>
+                            <li><a class="dropdown-item" href="#">Agent</a></li>
+                            <li><a class="dropdown-item" href="#">Admin</a></li>
+                        </ul>
+                    </div>
                     <li class="nav-item">
                         <a class="nav-link" href="register.html">Register</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="renew.html">Renew Policy</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="claim.php">Report a Claim</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Contact Us</a>
+                        <a class="nav-link" href="dashboard.html">Click to go to Dashboard</a>
                     </li>
                 </ul>
             </div>
@@ -48,13 +49,13 @@
         <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="../images/discount.jpg" class="d-block img-fluid w-100" style='height: 525px;' alt="Slide 1">
+                    <img src="../images/discount.jpg" class="d-block img-fluid w-100" style='height: 450px;' alt="Slide 1">
                 </div>
                 <div class="carousel-item">
-                    <img src="images/2.svg" class="d-block w-100" alt="Slide 2">
+                    <img src="images/bike_ins.avif" class="d-block w-100" style='height: 450px;' alt="Slide 2">
                 </div>
                 <div class="carousel-item">
-                    <img src="images/3.svg" class="d-block w-100" alt="Slide 3">
+                    <img src="images/auto_ins.jfif" class="d-block w-100" style='height: 450px;' alt="Slide 3">
                 </div>
                 <div class="carousel-item">
                     <img src="images/4.svg" class="d-block w-100" alt="Slide 4">
@@ -198,6 +199,8 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZtvUiKzFTbqSUc6mccfHv+usVUlnONXNtFdjQhbeFjoRvczknjfzEDXKoXG1" crossorigin="anonymous"></script>
     <script src="js/myscript.js"></script>
     <script>
         // Basic slideshow functionality using Bootstrap Carousel
